--- a/ASP.NET Seminarski rad/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ASP.NET Seminarski rad/Areas/Admin/Views/Category/Delete.cshtml
@@ -15,11 +15,13 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" value="Obriši" class="btn btn-danger" />
     </form>
 
 </div>
 
+<hr />
+
 <div>
-    <a asp-action="Index">Vrati se na popis kategorija</a>
+    <a asp-action="Index" class="btn btn-primary">Vrati se na popis kategorija</a>
 </div>
