--- a/ASP.NET Seminarski rad/Areas/Admin/Views/Order/Index.cshtml
+++ b/ASP.NET Seminarski rad/Areas/Admin/Views/Order/Index.cshtml
@@ -1,5 +1,29 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<Order>
+
+    <h1>Narudžbe</h1>
+    <hr/>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Id)</th>
+            <th>@Html.DisplayNameFor(model => model.DateCreated)</th>
+            <th>@Html.DisplayNameFor(model => model.Total)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                <td>@Html.DisplayFor(modelItem => item.DateCreated)</td>
+                <td>@Html.DisplayFor(modelItem => item.Total)</td>
+                <td>
+                    @*<a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary">Uredi</a> |*@
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Detalji</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Obriši</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
