--- a/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Delete.cshtml
+++ b/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Delete.cshtml
@@ -49,9 +49,10 @@
 
 <form asp-action="Delete">
     <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" />
+    <input type="submit" value="Obriši" class="btn btn-danger" />
 </form>
+<hr />
 
 <div>
-    <a asp-action="Index">Vrati se na popis proizvoda</a>
+    <a asp-action="Index" class="btn btn-primary">Vrati se na popis proizvoda</a>
 </div>
