--- a/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Details.cshtml
+++ b/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Details.cshtml
@@ -32,7 +32,10 @@
         @Html.DisplayNameFor(model => model.ProductPrice)
     </dl>
     <dl class="col-sm-10">
-        @Html.DisplayFor(model => model.ProductPrice)
+        @Html.DisplayFor(model => model.ProductPrice) €
+    </dl>
+    <dl>
+
     </dl>
     <dl class="col-sm-6">
         @if (string.IsNullOrEmpty(Model.ProductImage))
@@ -45,8 +48,18 @@
 
         }
     </dl>
+    <dl>
+
+    </dl>
 </div>
 
 <div>
-    <a asp-action="Index">Vrati se na popis proizvoda</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Uredi</a>
+    <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Obriši</a>
+</div>
+
+<hr />
+
+<div>
+    <a asp-action="Index" class="btn btn-primary">Vrati se na popis proizvoda</a>
 </div>
