--- a/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ASP.NET Seminarski rad/Areas/Admin/Views/Product/Edit.cshtml
@@ -2,6 +2,8 @@
 
 <h1>Uredi proizvod</h1>
 
+<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -27,12 +29,14 @@
                 <input asp-for="ProductPrice" class="form-control" />
                 <span asp-validation-for="ProductTitle" class="text-danger"></span>
             </div>
+            <p>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Spremi promjene" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+<hr />
 <div>
-    <a asp-action="Index">Vrati se na popis proizvoda</a>
+    <a asp-action="Index" class="btn btn-primary">Vrati se na popis proizvoda</a>
 </div>
